syntax = "proto3";
import "google/protobuf/timestamp.proto";

package tokenstore;

// The greeting service definition.
service TokenStore {
  // Sends a greeting
  rpc GetToken (GetTokenRequest) returns (Token) {}
  rpc SetToken (SetTokenRequest) returns (SetResponse) {}
}

message SetResponse {
  bool ok = 1;
}

message GetTokenRequest {
  int32 characterID = 1;
  int32 tokenCharacterID = 2;
}

message SetTokenRequest {
  int32 characterID = 1;
  int32 tokenCharacterID = 2;
  string tokenType = 3;
  string accessToken = 4; 
  string refreshToken = 5;
  google.protobuf.Timestamp Expiry = 6;
}

message Token {
  string tokenType = 1;
  string accessToken = 2;  
  string refreshToken = 3;
  google.protobuf.Timestamp Expiry = 4;
}

